moonlight-rewrite/test/fixtures/CompileFail/CompiledPatternExtensionConstructor.hs
module CompiledPatternExtensionConstructor where

import Moonlight.Rewrite.Algebra (CompiledPatternExtension (..))

constructorEscapes CompiledPatternExtension {} = ()
